documentation update and add mongodb step into test pipeline

--- a/docs/conventions/layouts.ipynb
+++ b/docs/conventions/layouts.ipynb
@@ -46,7 +46,15 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-23_20:50:49,735 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
+     ]
+    }
+   ],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "from h5rdmtoolbox.conventions.layout import Layout, Any, Regex"
@@ -221,7 +229,7 @@
      "output_type": "stream",
      "text": [
       "[\"/\"].attr(name=\"comment\", value=\"re:^[^ 0-9].*\")\n",
-      "[\"/\"].attr(name=\"__version__\", value=\"0.4.0a1\")\n",
+      "[\"/\"].attr(name=\"__version__\", value=\"0.5.1a0\")\n",
       "GroupValidation(ExistIn('devices'), opt=False)>\n"
      ]
     },
@@ -575,12 +583,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4838324300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4838324300\">\n",
+       "                        <input id=\"group-ds--189974186831300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--189974186831300\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.4.0a1</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.5.1a0</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -736,7 +744,7 @@
       "[\"/\"].dataset(name=\"re:^[x-z]_coordinate\", ndim=1)\n",
       "[\"/\"].attr(name=\"comment\", value=\"re:^[^ 0-9].*\")\n",
       "[\"/\"].dataset(name=\"re:^[x-z]_coordinate\", ndim=1)\n",
-      "[\"/\"].attr(name=\"__version__\", value=\"0.4.0a1\")\n",
+      "[\"/\"].attr(name=\"__version__\", value=\"0.5.1a0\")\n",
       "GroupValidation(ExistIn('devices'), opt=False)>\n"
      ]
     }
@@ -885,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "id": "644b6996-4b19-445a-af89-1ad10cb947c1",
    "metadata": {
     "tags": []
@@ -897,7 +905,7 @@
        "LayoutRegistry(\"tbx\",)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "id": "f2da66a6-5276-4c78-8b69-27a7b0bed612",
    "metadata": {
     "tags": []
