--- a/docs/conventions/standard_attributes.ipynb
+++ b/docs/conventions/standard_attributes.ipynb
@@ -5,17 +5,19 @@
    "id": "dfd4ad67-62a4-44e2-be29-d50f8ff09310",
    "metadata": {},
    "source": [
-    "# Conventions based on Standard Attributes\n",
+    "# Standard Attributes\n",
     "\n",
-    "The most important data in HDF5 files stored in the attributes. They are auxiliary data, wich describe the data in datasets and commonly its called metadata.\n",
+    "Data gets its real value through meta data. In HDF5 files this is done through attributes. A name for an attribute can generally freely selected and the value most commonly is a string or value (other data types are possible but out of the packages scope and concept at this stage). Multiple attributes are possible per HDF5 dataset or group. We believe, that by standardizing the use of attributes, the FAIRness of data significantly is improved.\n",
     "\n",
-    "Thus the file (content) is only as useful to others as well the data is described. Two  goals must be achieved:\n",
-    "1. Users set attributes\n",
-    "2. Attributes and their values are set according in a way excepted by a community or by collaborators\n",
+    "Standard attributes can be made required during dataset or group creatio when working with HDF5 files through this package. As there might always be a work-around, layouts (next chapter) can be used to validate the file meta-content.\n",
     "\n",
-    "The first aspect can be solved by inherting the class `h5py.Group` and adjust the method `create_dataset` such that positional arguments are added, which correspont to the minimal meta information required. This is e.g. the unit of the data stored in a dataset. The second aspect then must be covered inside the function by evaluating the value passed for these arguments. However, this requires individual user code (inheritence of the `h5py` classes each time a new requirement is introduced).\n",
+    "Thus, to summarize, the file (content) is only useful to others (and software!), if data is described in a way, everybody in the community/project/collaboration agreed on. Two  goals must be achieved:\n",
+    "1. Users are enforced to use these attributes\n",
+    "2. Attributes and their values are set according in a way excepted by a community or by collaborators (mainly syntax)\n",
     "\n",
-    "The `h5RDMtoolbox` allows to flexible define, add or remove standardized meta information to the core classes and methods respectively, in order to achieve the above 2 goals. The definition of such standardized data is done using `StandardAttribute`. A set of those form a `convention`."
+    "Instead of inherting inheriting from the base class `h5py.Group` and adjusting the method `create_dataset` according to user-defined attributes, we flexible enabling and disabling of specific attributes during run-time. This only requires implementing the attribute `set` and `get` methods of attributes but no further code manipulation of the core implementation.\n",
+    "\n",
+    "The following explains the usage:"
    ]
   },
   {
@@ -25,7 +27,15 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-24_08:51:13,732 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
+     ]
+    }
+   ],
    "source": [
     "import h5rdmtoolbox as h5tbx"
    ]
@@ -104,7 +114,8 @@
        "> Methods\u001b[0m:\n",
        "  init_file: (\u001b[3mNothing registered\u001b[0m)\n",
        "  create_group: (\u001b[3mNothing registered\u001b[0m)\n",
-       "  create_dataset: (\u001b[3mNothing registered\u001b[0m)"
+       "  create_dataset: (\u001b[3mNothing registered\u001b[0m)\n",
+       "  create_string_dataset: (\u001b[3mNothing registered\u001b[0m)"
       ]
      },
      "execution_count": 3,
@@ -164,12 +175,13 @@
        "\u001b[1m\n",
        "> Properties\u001b[0m:\n",
        "Dataset:\n",
-       "  * source: SourceAttribute\u001b[1m\n",
+       "    * source: SourceAttribute\u001b[1m\n",
        "> Methods\u001b[0m:\n",
        "  init_file: (\u001b[3mNothing registered\u001b[0m)\n",
        "  create_group: (\u001b[3mNothing registered\u001b[0m)\n",
        "  create_dataset:\n",
-       "  * source (opt=None)"
+       "    * source (opt=None)\n",
+       "  create_string_dataset: (\u001b[3mNothing registered\u001b[0m)"
       ]
      },
      "execution_count": 5,
@@ -240,7 +252,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\da4323\\AppData\\Local\\Temp\\ipykernel_35320\\272882550.py:16: UserWarning: No source available\n",
+      "C:\\Users\\da4323\\AppData\\Local\\Temp\\ipykernel_48696\\272882550.py:16: UserWarning: No source available\n",
       "  warnings.warn('No source available')\n"
      ]
     }
@@ -271,10 +283,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-05_10:06:16,338 ERROR    [core.py:621] Could not set attributes {'source': 'model-based'} for dataset data3\n",
-      "2023-04-05_10:06:16,338 ERROR    [core.py:621] Could not set attributes {'source': 'model-based'} for dataset data3\n",
-      "2023-04-05_10:06:16,341 ERROR    [core.py:621] Could not set attributes {'source': 'model-based'} for dataset data4\n",
-      "2023-04-05_10:06:16,341 ERROR    [core.py:621] Could not set attributes {'source': 'model-based'} for dataset data4\n"
+      "2023-04-24_08:51:13,863 ERROR    [core.py:629] Could not set attributes {'source': 'model-based'} for dataset data3\n",
+      "2023-04-24_08:51:13,863 ERROR    [core.py:629] Could not set attributes {'source': 'model-based'} for dataset data3\n",
+      "2023-04-24_08:51:13,867 ERROR    [core.py:629] Could not set attributes {'source': 'model-based'} for dataset data4\n",
+      "2023-04-24_08:51:13,867 ERROR    [core.py:629] Could not set attributes {'source': 'model-based'} for dataset data4\n"
      ]
     },
     {
@@ -336,12 +348,13 @@
        "\u001b[1m\n",
        "> Properties\u001b[0m:\n",
        "Dataset:\n",
-       "  * source: SourceAttribute\u001b[1m\n",
+       "    * source: SourceAttribute\u001b[1m\n",
        "> Methods\u001b[0m:\n",
        "  init_file: (\u001b[3mNothing registered\u001b[0m)\n",
        "  create_group: (\u001b[3mNothing registered\u001b[0m)\n",
        "  create_dataset:\n",
-       "  * source"
+       "    * source\n",
+       "  create_string_dataset: (\u001b[3mNothing registered\u001b[0m)"
       ]
      },
      "execution_count": 10,
