--- a/docs/conventions/layouts.ipynb
+++ b/docs/conventions/layouts.ipynb
@@ -23,11 +23,14 @@
     "\n",
     "We first list our requirements/specifications like we would do in a formal document. Then we translate it into a `Layout` object:\n",
     "\n",
-    "1. Compression opt is `gzip` for all datasets\n",
-    "2. All datasets must have an attribute `units`\n",
-    "3. All groups must have an attribute `comments`. A Comment must not start with a blank or a number.\n",
-    "4. The *root group* must hold the attribute `version`, which is the current version of the toolbox\n",
-    "5. 5. The group `measurement_devices` must exist at group `devices`"
+    "1. Datasets:\n",
+    "    1. Compression opt is `gzip` for all datasets\n",
+    "    2. All datasets must have an attribute `units` and `standard_name`\n",
+    "2. Root group:\n",
+    "    1. The *root group* must hold the attribute `version`, which is the current version of the toolbox. Also it must contain the attributes `title` and  `user`\n",
+    "3. Groups:\n",
+    "    1. All groups must have an attribute `comments`. A Comment must not start with a blank or a number.\n",
+    "    2. The group `measurement_devices` must exist at group `devices`"
    ]
   },
   {
@@ -46,15 +49,7 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-04-23_20:50:49,735 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "from h5rdmtoolbox.conventions.layout import Layout, Any, Regex"
@@ -85,7 +80,13 @@
    "id": "6f926709-3d58-4bfe-a44b-835239c1086b",
    "metadata": {},
    "source": [
-    "### 1. Compression opt is `gzip` for all datasets"
+    "### 1. Datasets\n",
+    "\n",
+    "Instead of calling `create_datset`, with the Layout object `specify_dataset` is called\n",
+    "\n",
+    "#### A. Dataset properties\n",
+    "\n",
+    "All datasets must use gzip-compression, so the dataset name is irreleant. For this to specify we can use the `Ellipsis` object of python. Other parameters of `specify_dataset` are the parameters set during `create_dataset` of the h5py dataset. We only nee `compresison` in this case:"
    ]
   },
   {
@@ -105,7 +106,7 @@
     }
    ],
    "source": [
-    "dv = lay['*'].define_dataset(compression='gzip')\n",
+    "dv = lay['*'].specify_dataset(name='...', compression='gzip')\n",
     "print(dv)"
    ]
   },
@@ -114,19 +115,49 @@
    "id": "b95e32ab-5b01-41a4-aea3-e610ec69b2e6",
    "metadata": {},
    "source": [
-    "### 2. All datasets must have an attribute `units`"
+    "#### B. Dataset attributes\n",
+    "We can either use the attribute manager `.attrs` as known from the `h5py` implementation or we use `specify_attrs()`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "b297ff59-e2fa-4c3f-a101-63bb7ecff2a9",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "lay['*'].define_dataset().attrs['units'] = ...  # The Ellipsis object is equal to the validator Any()"
+    "ds = lay['*'].specify_dataset()\n",
+    "\n",
+    "ds.attrs = {'units': ..., 'standard_name': ...}\n",
+    "# we could also have done this:\n",
+    "# ds.attrs['units']: ...\n",
+    "# ds.attrs['standard_name'] =  ...\n",
+    "# ... or:\n",
+    "# ds.specify_attrs(units=..., standard_name=...)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca2c0876-deed-456b-a23d-9810f1778fa0",
+   "metadata": {},
+   "source": [
+    "### 2. Root Group\n",
+    "#### A Root attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "87c4cff7-a27c-4334-bc3d-bfafd92c7d89",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "lay['/'].attrs['__version__'] = h5tbx.__version__\n",
+    "lay['/'].specify_attrs(title=...,user=...)"
    ]
   },
   {
@@ -134,41 +165,21 @@
    "id": "8fb31346-1a6a-4560-ba54-1454c64d7079",
    "metadata": {},
    "source": [
-    "### 3. All groups must have an attribute `comments`.\n",
-    "A Comment must not start with a blank or a number."
+    "### 3. Group\n",
+    "#### A. All groups must have an attribute `comments`.\n",
+    "The attribute \"comment\" must not start with a blank or a number."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "11d140af-a740-4d45-96a4-397aa59bd0e7",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "lay['*'].define_group().attrs['comment'] = Regex(r'^[^ 0-9].*')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "daced41f-b94d-4aae-8265-89f8e42746ab",
-   "metadata": {},
-   "source": [
-    "### 4. The *root group* must hold the attribute `__version__`\n",
-    "The value of the attribute must be equal to the current version of the toolbox"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "6fd76339-91a2-4b63-94f3-2fdd47d9bb70",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "lay['/'].define_group().attrs['__version__'] = h5tbx.__version__"
+    "lay['*'].specify_group().attrs['comment'] = Regex(r'^[^ 0-9].*')"
    ]
   },
   {
@@ -178,12 +189,12 @@
     "tags": []
    },
    "source": [
-    "### 5. The group `measurement_devices` must exist at group `devices`"
+    "#### B The group `measurement_devices` must exist at group `devices`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "e667ce2d-5eec-4821-b60c-cc4cdff94913",
    "metadata": {
     "tags": []
@@ -195,13 +206,13 @@
        "GroupValidation(ExistIn('measurement_devices'), opt=False)>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lay['devices'].define_group('measurement_devices')"
+    "lay['devices'].specify_group('measurement_devices')"
    ]
   },
   {
@@ -218,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "6e4f5575-4c82-4f40-a295-79ed091c3c52",
    "metadata": {
     "tags": []
@@ -228,18 +239,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[\"/\"].dataset(name=\"...\", compression=gzip)\n",
       "[\"/\"].attr(name=\"comment\", value=\"re:^[^ 0-9].*\")\n",
-      "[\"/\"].attr(name=\"__version__\", value=\"0.5.1a0\")\n",
+      "[\"/\"].attr(name=\"__version__\", value=\"0.5.1a1\")\n",
+      "[\"/\"].attr(name=\"title\", value=\"...\")\n",
+      "[\"/\"].attr(name=\"user\", value=\"...\")\n",
       "GroupValidation(ExistIn('devices'), opt=False)>\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "3"
+       "6"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "aed5d184-3d7e-4063-8fd0-484627ba751a",
    "metadata": {},
    "outputs": [
@@ -263,9 +277,9 @@
      "text": [
       "Layout Validation report\n",
       "------------------------\n",
-      "Number of validations (called/specified): 7/13\n",
-      "Number of inactive validations: 6\n",
-      "Success rate: 0.0% (n_fails=3)\n"
+      "Number of validations (called/specified): 9/19\n",
+      "Number of inactive validations: 10\n",
+      "Success rate: 0.0% (n_fails=6)\n"
      ]
     }
    ],
@@ -275,12 +289,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "b9902245-3120-4579-9643-cc58bea22bf8",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"/\"].dataset(name=\"...\", compression=gzip)\n"
+     ]
+    }
+   ],
    "source": [
     "with h5tbx.File() as h5:\n",
     "    h5.create_dataset('velocity',\n",
@@ -300,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "d2c8c8df-5a41-408b-98b2-77f77aec5ac9",
    "metadata": {},
    "outputs": [
@@ -310,9 +332,9 @@
      "text": [
       "Layout Validation report\n",
       "------------------------\n",
-      "Number of validations (called/specified): 13/13\n",
-      "Number of inactive validations: 0\n",
-      "Success rate: 100.0% (n_fails=0)\n"
+      "Number of validations (called/specified): 15/19\n",
+      "Number of inactive validations: 4\n",
+      "Success rate: 66.7% (n_fails=6)\n"
      ]
     }
    ],
@@ -338,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "9471245e-c34e-4752-b66e-dc8bcfffe93d",
    "metadata": {
     "tags": []
@@ -350,13 +372,13 @@
        "DatasetValidation(Regex('^[x-z]_coordinate'), opt=False)>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lay['*'].define_dataset(name=Regex('^[x-z]_coordinate'), ndim=1)"
+    "lay['*'].specify_dataset(name=Regex('^[x-z]_coordinate'), ndim=1)"
    ]
   },
   {
@@ -371,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "a04e4b68-c604-46d5-ac63-8902a9d77d61",
    "metadata": {
     "tags": []
@@ -583,12 +605,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--189974186831300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--189974186831300\">\n",
+       "                        <input id=\"group-ds--228633811500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--228633811500\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.5.1a0</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.5.1a1</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -619,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "bf51d18c-cb84-4e9b-ac5e-590bf3b0c0c3",
    "metadata": {
     "tags": []
@@ -631,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "bdf32a53-289b-4c86-b085-adbea6ab2892",
    "metadata": {
     "tags": []
@@ -640,10 +662,10 @@
     {
      "data": {
       "text/plain": [
-       "4"
+       "7"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "1f2143ab-cbad-499f-8068-080e59ebec74",
    "metadata": {
     "tags": []
@@ -679,10 +701,10 @@
     {
      "data": {
       "text/plain": [
-       "4"
+       "7"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "620139b4-2a91-48b1-84dc-4ff0b0fe67fc",
    "metadata": {
     "tags": []
@@ -705,13 +727,16 @@
     {
      "data": {
       "text/plain": [
-       "[ValidationResult(AttributeValidation(Equal('comment'), opt=False)>, False, obj=<class \"File\" convention: \"h5py\">),\n",
+       "[ValidationResult(DatasetValidation(Equal('...'), opt=False)>, False, obj=None),\n",
+       " ValidationResult(AttributeValidation(Equal('comment'), opt=False)>, False, obj=<class \"File\" convention: \"h5py\">),\n",
        " ValidationResult(DatasetValidation(Regex('^[x-z]_coordinate'), opt=False)>, False, obj=None),\n",
        " ValidationResult(AttributeValidation(Equal('__version__'), opt=False)>, False, obj=<class \"File\" convention: \"h5py\">),\n",
+       " ValidationResult(AttributeValidation(Equal('title'), opt=False)>, False, obj=<class \"File\" convention: \"h5py\">),\n",
+       " ValidationResult(AttributeValidation(Equal('user'), opt=False)>, False, obj=<class \"File\" convention: \"h5py\">),\n",
        " ValidationResult(GroupValidation(ExistIn('devices'), opt=False)>, False, obj=<class \"File\" convention: \"h5py\">)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "49a0ed8f-e8e0-446a-bf55-73e05652b2f6",
    "metadata": {
     "tags": []
@@ -740,11 +765,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[\"/\"].dataset(name=\"...\", compression=gzip)\n",
       "[\"/\"].attr(name=\"comment\", value=\"re:^[^ 0-9].*\")\n",
       "[\"/\"].dataset(name=\"re:^[x-z]_coordinate\", ndim=1)\n",
+      "[\"/\"].dataset(name=\"...\", compression=gzip)\n",
       "[\"/\"].attr(name=\"comment\", value=\"re:^[^ 0-9].*\")\n",
       "[\"/\"].dataset(name=\"re:^[x-z]_coordinate\", ndim=1)\n",
-      "[\"/\"].attr(name=\"__version__\", value=\"0.5.1a0\")\n",
+      "[\"/\"].attr(name=\"__version__\", value=\"0.5.1a1\")\n",
+      "[\"/\"].attr(name=\"title\", value=\"...\")\n",
+      "[\"/\"].attr(name=\"user\", value=\"...\")\n",
       "GroupValidation(ExistIn('devices'), opt=False)>\n"
      ]
     }
@@ -771,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "73e710a5-79a5-4528-964f-b40b4fed3b09",
    "metadata": {
     "tags": []
@@ -796,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "ec658204-c29b-4026-a42c-0f825febf5f8",
    "metadata": {
     "tags": []
@@ -809,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "17cb367f-e2fd-485f-9a81-d7f52fdb486e",
    "metadata": {
     "tags": []
@@ -836,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "id": "26d459cf-97c8-410a-a739-27eb933a9971",
    "metadata": {
     "tags": []
@@ -873,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "c17da1cb-821b-4187-85ab-2ea58b0d13d4",
    "metadata": {
     "tags": []
@@ -893,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "id": "644b6996-4b19-445a-af89-1ad10cb947c1",
    "metadata": {
     "tags": []
@@ -905,7 +934,7 @@
        "LayoutRegistry(\"tbx\",)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "f2da66a6-5276-4c78-8b69-27a7b0bed612",
    "metadata": {
     "tags": []
