--- a/docs/conventions/layouts.ipynb
+++ b/docs/conventions/layouts.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "d9e2c157-bd96-47e0-9602-76c79ffbe989",
    "metadata": {
     "tags": []
@@ -52,7 +52,8 @@
    "outputs": [],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
-    "from h5rdmtoolbox.conventions.layout import Layout, Any, Regex"
+    "from h5rdmtoolbox.conventions.layout import Layout\n",
+    "from h5rdmtoolbox.conventions.layout.validators import Regex"
    ]
   },
   {
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a7257533-784f-4f48-94cb-d8de107ad62c",
    "metadata": {
     "tags": []
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e236705c-928f-4eb0-b1ed-9c283ade86ff",
    "metadata": {
     "tags": []
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "b297ff59-e2fa-4c3f-a101-63bb7ecff2a9",
    "metadata": {
     "tags": []
@@ -149,15 +150,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "87c4cff7-a27c-4334-bc3d-bfafd92c7d89",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AttributeValidation(Equal('title')=Any(opt=True), Equal('user')=Any(opt=True) in GroupValidation(ExistIn('/'))>)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lay['/'].attrs['__version__'] = h5tbx.__version__\n",
-    "lay['/'].specify_attrs(title=...,user=...)"
+    "lay['/'].specify_attrs(dict(title=...,user=...))"
    ]
   },
   {
@@ -172,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "11d140af-a740-4d45-96a4-397aa59bd0e7",
    "metadata": {
     "tags": []
@@ -194,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "e667ce2d-5eec-4821-b60c-cc4cdff94913",
    "metadata": {
     "tags": []
@@ -203,10 +215,10 @@
     {
      "data": {
       "text/plain": [
-       "GroupValidation(ExistIn('measurement_devices'), opt=False)>"
+       "GroupValidation(ExistIn('measurement_devices'))>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "6e4f5575-4c82-4f40-a295-79ed091c3c52",
    "metadata": {
     "tags": []
@@ -240,20 +252,19 @@
      "output_type": "stream",
      "text": [
       "[\"/\"].dataset(name=\"...\", compression=gzip)\n",
-      "[\"/\"].attr(name=\"comment\", value=\"re:^[^ 0-9].*\")\n",
-      "[\"/\"].attr(name=\"__version__\", value=\"0.5.1a1\")\n",
-      "[\"/\"].attr(name=\"title\", value=\"...\")\n",
-      "[\"/\"].attr(name=\"user\", value=\"...\")\n",
-      "GroupValidation(ExistIn('devices'), opt=False)>\n"
+      "[\"/...\"].attr([\"Equal('comment')=Regex('^[^ 0-9].*')\"])\n",
+      "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('__version__')=Equal('0.5.1a1')\"])\n",
+      "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('title')=Any(opt=True)\", \"Equal('user')=Any(opt=True)\"])\n",
+      "GroupValidation(ExistIn('devices'))>\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "6"
+       "5"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "aed5d184-3d7e-4063-8fd0-484627ba751a",
    "metadata": {},
    "outputs": [
@@ -277,9 +288,9 @@
      "text": [
       "Layout Validation report\n",
       "------------------------\n",
-      "Number of validations (called/specified): 9/19\n",
-      "Number of inactive validations: 10\n",
-      "Success rate: 0.0% (n_fails=6)\n"
+      "Number of validations (called/specified): 9/12\n",
+      "Number of inactive validations: 3\n",
+      "Success rate: 37.5% (n_fails=5)\n"
      ]
     }
    ],
@@ -289,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "b9902245-3120-4579-9643-cc58bea22bf8",
    "metadata": {
     "tags": []
@@ -322,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "d2c8c8df-5a41-408b-98b2-77f77aec5ac9",
    "metadata": {},
    "outputs": [
@@ -332,9 +343,9 @@
      "text": [
       "Layout Validation report\n",
       "------------------------\n",
-      "Number of validations (called/specified): 15/19\n",
-      "Number of inactive validations: 4\n",
-      "Success rate: 66.7% (n_fails=6)\n"
+      "Number of validations (called/specified): 11/12\n",
+      "Number of inactive validations: 1\n",
+      "Success rate: 72.2% (n_fails=5)\n"
      ]
     }
    ],
@@ -360,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "9471245e-c34e-4752-b66e-dc8bcfffe93d",
    "metadata": {
     "tags": []
@@ -369,10 +380,10 @@
     {
      "data": {
       "text/plain": [
-       "DatasetValidation(Regex('^[x-z]_coordinate'), opt=False)>"
+       "DatasetValidation(Regex('^[x-z]_coordinate'))>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "a04e4b68-c604-46d5-ac63-8902a9d77d61",
    "metadata": {
     "tags": []
@@ -605,8 +616,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--228633811500\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--228633811500\">\n",
+       "                        <input id=\"group-ds--53201732600\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--53201732600\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
@@ -641,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "bf51d18c-cb84-4e9b-ac5e-590bf3b0c0c3",
    "metadata": {
     "tags": []
@@ -653,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "bdf32a53-289b-4c86-b085-adbea6ab2892",
    "metadata": {
     "tags": []
@@ -662,10 +673,10 @@
     {
      "data": {
       "text/plain": [
-       "7"
+       "6"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "1f2143ab-cbad-499f-8068-080e59ebec74",
    "metadata": {
     "tags": []
@@ -701,10 +712,10 @@
     {
      "data": {
       "text/plain": [
-       "7"
+       "6"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "620139b4-2a91-48b1-84dc-4ff0b0fe67fc",
    "metadata": {
     "tags": []
@@ -727,16 +738,15 @@
     {
      "data": {
       "text/plain": [
-       "[ValidationResult(DatasetValidation(Equal('...'), opt=False)>, False, obj=None),\n",
-       " ValidationResult(AttributeValidation(Equal('comment'), opt=False)>, False, obj=<class \"File\" convention: \"h5py\">),\n",
-       " ValidationResult(DatasetValidation(Regex('^[x-z]_coordinate'), opt=False)>, False, obj=None),\n",
-       " ValidationResult(AttributeValidation(Equal('__version__'), opt=False)>, False, obj=<class \"File\" convention: \"h5py\">),\n",
-       " ValidationResult(AttributeValidation(Equal('title'), opt=False)>, False, obj=<class \"File\" convention: \"h5py\">),\n",
-       " ValidationResult(AttributeValidation(Equal('user'), opt=False)>, False, obj=<class \"File\" convention: \"h5py\">),\n",
-       " ValidationResult(GroupValidation(ExistIn('devices'), opt=False)>, False, obj=<class \"File\" convention: \"h5py\">)]"
+       "[ValidationResult(\u001b[91mds validation \"...\" failed for /\u001b[0m),\n",
+       " ValidationResult(\u001b[91m\"/\" is missing required attributes: [Equal('comment')]\u001b[0m),\n",
+       " ValidationResult(\u001b[91mds validation \"re:^[x-z]_coordinate\" failed for /\u001b[0m),\n",
+       " ValidationResult(\u001b[91m\"/\" is missing required attributes: [Equal('__version__')]\u001b[0m),\n",
+       " ValidationResult(\u001b[91m\"/\" is missing required attributes: [Equal('title'), Equal('user')]\u001b[0m),\n",
+       " ValidationResult(\u001b[91m\"devices\" does not exist in \"/\"\u001b[0m)]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "49a0ed8f-e8e0-446a-bf55-73e05652b2f6",
    "metadata": {
     "tags": []
@@ -766,15 +776,14 @@
      "output_type": "stream",
      "text": [
       "[\"/\"].dataset(name=\"...\", compression=gzip)\n",
-      "[\"/\"].attr(name=\"comment\", value=\"re:^[^ 0-9].*\")\n",
+      "[\"/...\"].attr([\"Equal('comment')=Regex('^[^ 0-9].*')\"])\n",
       "[\"/\"].dataset(name=\"re:^[x-z]_coordinate\", ndim=1)\n",
       "[\"/\"].dataset(name=\"...\", compression=gzip)\n",
-      "[\"/\"].attr(name=\"comment\", value=\"re:^[^ 0-9].*\")\n",
+      "[\"/...\"].attr([\"Equal('comment')=Regex('^[^ 0-9].*')\"])\n",
       "[\"/\"].dataset(name=\"re:^[x-z]_coordinate\", ndim=1)\n",
-      "[\"/\"].attr(name=\"__version__\", value=\"0.5.1a1\")\n",
-      "[\"/\"].attr(name=\"title\", value=\"...\")\n",
-      "[\"/\"].attr(name=\"user\", value=\"...\")\n",
-      "GroupValidation(ExistIn('devices'), opt=False)>\n"
+      "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('__version__')=Equal('0.5.1a1')\"])\n",
+      "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('title')=Any(opt=True)\", \"Equal('user')=Any(opt=True)\"])\n",
+      "GroupValidation(ExistIn('devices'))>\n"
      ]
     }
    ],
@@ -800,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "73e710a5-79a5-4528-964f-b40b4fed3b09",
    "metadata": {
     "tags": []
@@ -819,13 +828,13 @@
     "    def __str__(self):\n",
     "        return f're:{self.reference}'\n",
     "    \n",
-    "    def __call__(self, value):\n",
+    "    def validate(self, value):\n",
     "        return re.match(self.reference, value) is not None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "ec658204-c29b-4026-a42c-0f825febf5f8",
    "metadata": {
     "tags": []
@@ -838,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "17cb367f-e2fd-485f-9a81-d7f52fdb486e",
    "metadata": {
     "tags": []
@@ -865,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "26d459cf-97c8-410a-a739-27eb933a9971",
    "metadata": {
     "tags": []
@@ -902,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "c17da1cb-821b-4187-85ab-2ea58b0d13d4",
    "metadata": {
     "tags": []
@@ -922,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "644b6996-4b19-445a-af89-1ad10cb947c1",
    "metadata": {
     "tags": []
@@ -934,7 +943,7 @@
        "LayoutRegistry(\"tbx\",)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "f2da66a6-5276-4c78-8b69-27a7b0bed612",
    "metadata": {
     "tags": []
@@ -957,8 +966,8 @@
      "text": [
       "Layout Validation report\n",
       "------------------------\n",
-      "Number of validations (called/specified): 6/10\n",
-      "Number of inactive validations: 4\n",
+      "Number of validations (called/specified): 5/6\n",
+      "Number of inactive validations: 1\n",
       "Success rate: 100.0% (n_fails=0)\n"
      ]
     }
