--- a/docs/conventions/standard_attributes.ipynb
+++ b/docs/conventions/standard_attributes.ipynb
@@ -32,7 +32,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-24_08:51:13,732 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
+      "2023-05-07_09:51:57,819 DEBUG    [__init__.py:36] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
      ]
     }
    ],
@@ -47,15 +47,54 @@
    "source": [
     "## Standard Attributes\n",
     "\n",
-    "A standard attribute can be defined by inheriting from the class `StandardAttribute`. To control the processed data, which means to evaluate the user input and control return values, we need to provide the methods `set()` and `get()` and a `name`. To make it available for use it must be registerde (added) to a convention which then is enabled. Will walk though all that in the following.\n",
+    "A standard attribute can be defined by inheriting from the class `StandardAttribute`. To control the processed data, which means to evaluate the user input and control return values, we need to provide the methods `set()` and `get()` and a `name`. To make it available for use it must be registerde (added) to a convention which then is enabled. Will walk though all that in the following."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "254bd8ff-1d4f-4e20-aed9-0d488615d284",
+   "metadata": {},
+   "source": [
+    "## List of available conventions\n",
     "\n",
-    "## Definition\n",
-    "Let's say we want to enforce the user to store the type of data with each dataset, e.g. whether it is from a numerical or experimental source. We call this attribute \"source\":"
+    "It is possible to register conventions, which is the list of standardized attributes for the respective HDF objects. A list can be optained by the dictionary `conventons.registered_conventions`:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "b3382d99-6c5e-4d81-8894-a95eb8364dd4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['h5py', 'tbx'])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h5tbx.conventions.registered_conventions.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fffca28f-1840-42e4-a672-b8292554f611",
+   "metadata": {},
+   "source": [
+    "## Definition of a standardized attribute\n",
+    "Let's say we want to enforce the user to store the type of data with each dataset, e.g. whether it is from a numerical or experimental source. We call this attribute \"source\":"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "f7cc80b7-8880-4414-95b6-803730a499c5",
    "metadata": {
     "tags": []
@@ -99,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b04a6b93-9bf3-45eb-ba88-4930d7b935d9",
    "metadata": {
     "tags": []
@@ -108,17 +147,12 @@
     {
      "data": {
       "text/plain": [
-       "\u001b[1mConvention(my_convention)\u001b[0m\n",
-       "\u001b[1m\n",
+       "\u001b[1mConvention(my_convention)\u001b[0m\u001b[1m\n",
        "> Properties\u001b[0m: (\u001b[3mNothing registered\u001b[0m)\u001b[1m\n",
-       "> Methods\u001b[0m:\n",
-       "  init_file: (\u001b[3mNothing registered\u001b[0m)\n",
-       "  create_group: (\u001b[3mNothing registered\u001b[0m)\n",
-       "  create_dataset: (\u001b[3mNothing registered\u001b[0m)\n",
-       "  create_string_dataset: (\u001b[3mNothing registered\u001b[0m)"
+       "> Methods\u001b[0m:"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,18 +172,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "664bc012-33d8-4ccc-a1fd-ca9516bb26a8",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "cv.add(SourceAttribute,\n",
-    "      target_cls=h5tbx.Dataset,\n",
-    "      add_to_method=True,\n",
-    "      optional=True,\n",
-    "      position={'after': 'data'})"
+    "cv['create_dataset'].add(SourceAttribute,\n",
+    "                         add_to_method=True,\n",
+    "                         optional=True,\n",
+    "                         position={'after': 'data'})"
    ]
   },
   {
@@ -162,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c3621cd4-2431-44ad-9896-790a7e7fd89a",
    "metadata": {
     "tags": []
@@ -171,20 +204,16 @@
     {
      "data": {
       "text/plain": [
-       "\u001b[1mConvention(my_convention)\u001b[0m\n",
-       "\u001b[1m\n",
+       "\u001b[1mConvention(my_convention)\u001b[0m\u001b[1m\n",
        "> Properties\u001b[0m:\n",
        "Dataset:\n",
        "    * source: SourceAttribute\u001b[1m\n",
        "> Methods\u001b[0m:\n",
-       "  init_file: (\u001b[3mNothing registered\u001b[0m)\n",
-       "  create_group: (\u001b[3mNothing registered\u001b[0m)\n",
-       "  create_dataset:\n",
-       "    * source (opt=None)\n",
-       "  create_string_dataset: (\u001b[3mNothing registered\u001b[0m)"
+       "  Group.create_dataset():\n",
+       "    * source (optional)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "35fe8700-fc08-49c7-9893-578339248541",
    "metadata": {
     "tags": []
@@ -235,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "299b1a22-009a-404b-8ba8-f705a1864e29",
    "metadata": {
     "tags": []
@@ -252,7 +281,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\da4323\\AppData\\Local\\Temp\\ipykernel_48696\\272882550.py:16: UserWarning: No source available\n",
+      "C:\\Users\\da4323\\AppData\\Local\\Temp\\ipykernel_25392\\272882550.py:16: UserWarning: No source available\n",
       "  warnings.warn('No source available')\n"
      ]
     }
@@ -273,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2ef94ffa-9ed0-44f8-9f79-ee7012cc3bec",
    "metadata": {
     "tags": []
@@ -283,10 +312,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-24_08:51:13,863 ERROR    [core.py:629] Could not set attributes {'source': 'model-based'} for dataset data3\n",
-      "2023-04-24_08:51:13,863 ERROR    [core.py:629] Could not set attributes {'source': 'model-based'} for dataset data3\n",
-      "2023-04-24_08:51:13,867 ERROR    [core.py:629] Could not set attributes {'source': 'model-based'} for dataset data4\n",
-      "2023-04-24_08:51:13,867 ERROR    [core.py:629] Could not set attributes {'source': 'model-based'} for dataset data4\n"
+      "2023-05-07_09:51:57,943 ERROR    [core.py:637] Could not set attributes {'source': 'model-based'} for dataset data3\n",
+      "2023-05-07_09:51:57,943 ERROR    [core.py:637] Could not set attributes {'source': 'model-based'} for dataset data3\n",
+      "2023-05-07_09:51:57,948 ERROR    [core.py:637] Could not set attributes {'source': 'model-based'} for dataset data4\n",
+      "2023-05-07_09:51:57,948 ERROR    [core.py:637] Could not set attributes {'source': 'model-based'} for dataset data4\n"
      ]
     },
     {
@@ -323,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "4cb1bafe-795d-4824-aa91-0fda3c1c0f17",
    "metadata": {
     "tags": []
@@ -335,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "71233e6a-5a54-46eb-a854-9bc90c0d687a",
    "metadata": {
     "tags": []
@@ -344,20 +373,16 @@
     {
      "data": {
       "text/plain": [
-       "\u001b[1mConvention(my_convention)\u001b[0m\n",
-       "\u001b[1m\n",
+       "\u001b[1mConvention(my_convention)\u001b[0m\u001b[1m\n",
        "> Properties\u001b[0m:\n",
        "Dataset:\n",
        "    * source: SourceAttribute\u001b[1m\n",
        "> Methods\u001b[0m:\n",
-       "  init_file: (\u001b[3mNothing registered\u001b[0m)\n",
-       "  create_group: (\u001b[3mNothing registered\u001b[0m)\n",
-       "  create_dataset:\n",
-       "    * source\n",
-       "  create_string_dataset: (\u001b[3mNothing registered\u001b[0m)"
+       "  Group.create_dataset():\n",
+       "    * source"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "e691035f-f4e6-4e42-8707-c1ddf53a04f4",
    "metadata": {
     "tags": []
@@ -392,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "d518cfdd-b28c-4917-af5e-ac9d239de346",
    "metadata": {
     "tags": []
