--- a/docs/conventions/standard_attributes.ipynb
+++ b/docs/conventions/standard_attributes.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# Standard Attributes\n",
     "\n",
-    "Data gets its real value through meta data. In HDF5 files this is done through attributes. A name for an attribute can generally freely selected and the value most commonly is a string or value (other data types are possible but out of the packages scope and concept at this stage). Multiple attributes are possible per HDF5 dataset or group. We believe, that by standardizing the use of attributes, the FAIRness of data significantly is improved.\n",
+    "Data gets its real value through meta data. In HDF5 files this is done through attributes. A name for an attribute can generally be freely selected. Its value is typically an interger or a string (other data types are possible but out of the packages scope and concept at this stage). Multiple attributes are possible per HDF5 dataset or group. We believe, that by standardizing the use of attributes, the FAIRness of data significantly is improved. Only when all users agree on the same minimum set of attributes data become explorable and automatically processable by machines.\n",
     "\n",
-    "Standard attributes can be made required during dataset or group creatio when working with HDF5 files through this package. As there might always be a work-around, layouts (next chapter) can be used to validate the file meta-content.\n",
+    "Standard attributes can be made required during dataset or group creation. As there might always be a work-around, [layouts](./layouts.ipynb) can be used to validate the file meta-content during file exchanged. Invalid files would be rejected and missing (meta) data needed to be updated.\n",
     "\n",
     "Thus, to summarize, the file (content) is only useful to others (and software!), if data is described in a way, everybody in the community/project/collaboration agreed on. Two  goals must be achieved:\n",
     "1. Users are enforced to use these attributes\n",
@@ -57,7 +57,7 @@
    "source": [
     "## List of available conventions\n",
     "\n",
-    "It is possible to register conventions, which is the list of standardized attributes for the respective HDF objects. A list can be optained by the dictionary `conventons.registered_conventions`:"
+    "It is possible to register conventions, which is the list of standard attributes for the respective HDF objects. A list can be optained by the dictionary `conventons.registered_conventions`:"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "id": "fffca28f-1840-42e4-a672-b8292554f611",
    "metadata": {},
    "source": [
-    "## Definition of a standardized attribute\n",
+    "## Definition of a standard attribute\n",
     "Let's say we want to enforce the user to store the type of data with each dataset, e.g. whether it is from a numerical or experimental source. We call this attribute \"source\":"
    ]
   },
@@ -128,7 +128,7 @@
    "id": "f794b19d-a950-47d7-8af5-b16b79e70974",
    "metadata": {},
    "source": [
-    "Now, we regulated what happens, when this special (standardized) attribute is written (`set`) and read (`get`).\n",
+    "Now, we regulated what happens, when this special (standard) attribute is written (`set`) and read (`get`).\n",
     "\n",
     "## Add to a convention\n",
     "Next we need to add this attbribute to a convention and assign it to the `Group` calss and the method `create_dataset` in order to make \"source\" available to the user and enforce its usage.\n",
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "2ef94ffa-9ed0-44f8-9f79-ee7012cc3bec",
    "metadata": {
     "tags": []
@@ -312,10 +312,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-07_09:51:57,943 ERROR    [core.py:637] Could not set attributes {'source': 'model-based'} for dataset data3\n",
-      "2023-05-07_09:51:57,943 ERROR    [core.py:637] Could not set attributes {'source': 'model-based'} for dataset data3\n",
-      "2023-05-07_09:51:57,948 ERROR    [core.py:637] Could not set attributes {'source': 'model-based'} for dataset data4\n",
-      "2023-05-07_09:51:57,948 ERROR    [core.py:637] Could not set attributes {'source': 'model-based'} for dataset data4\n"
+      "2023-05-07_17:56:58,573 ERROR    [core.py:637] Could not set attributes {'source': 'model-based'} for dataset data3\n",
+      "2023-05-07_17:56:58,573 ERROR    [core.py:637] Could not set attributes {'source': 'model-based'} for dataset data3\n",
+      "2023-05-07_17:56:58,577 ERROR    [core.py:637] Could not set attributes {'source': 'model-based'} for dataset data4\n",
+      "2023-05-07_17:56:58,577 ERROR    [core.py:637] Could not set attributes {'source': 'model-based'} for dataset data4\n"
      ]
     },
     {
