--- a/docs/conventions/standard_attributes.ipynb
+++ b/docs/conventions/standard_attributes.ipynb
@@ -7,17 +7,15 @@
    "source": [
     "# Standard Attributes\n",
     "\n",
-    "Data gets its real value through meta data. In HDF5 files this is done through attributes. A name for an attribute can generally be freely selected. Its value is typically an interger or a string (other data types are possible but out of the packages scope and concept at this stage). Multiple attributes are possible per HDF5 dataset or group. We believe, that by standardizing the use of attributes, the FAIRness of data significantly is improved. Only when all users agree on the same minimum set of attributes data become explorable and automatically processable by machines.\n",
+    "Data alone is meaningless. Only if it is associated with auxiliary data (meta data) it becomes interpretable and (re-)usable for others. In HDF5 files is realized by using **attribute**, which are assigned to groups and datasets. HDF attributes are like dictionaries: You provide a name and a value. However, which name and value you are using is generally up to the you.\n",
     "\n",
-    "Standard attributes can be made required during dataset or group creation. As there might always be a work-around, [layouts](./layouts.ipynb) can be used to validate the file meta-content during file exchanged. Invalid files would be rejected and missing (meta) data needed to be updated.\n",
+    "The `h5RDmtoolbox` let's you specify rules for specific attributes. These attributes are simply called **standard attributes** and can be enabled or disabled and therefore made available to the user or not.\n",
     "\n",
-    "Thus, to summarize, the file (content) is only useful to others (and software!), if data is described in a way, everybody in the community/project/collaboration agreed on. Two  goals must be achieved:\n",
-    "1. Users are enforced to use these attributes\n",
-    "2. Attributes and their values are set according in a way excepted by a community or by collaborators (mainly syntax)\n",
+    "If an attribute is addressed by the user, e.g. the attribute `units`, and a standard attribute implementation exists for this name, then the value is processed by the respective rule and the attribute is set or an error is raised in case of a invalid input.\n",
     "\n",
-    "Instead of inherting inheriting from the base class `h5py.Group` and adjusting the method `create_dataset` according to user-defined attributes, we flexible enabling and disabling of specific attributes during run-time. This only requires implementing the attribute `set` and `get` methods of attributes but no further code manipulation of the core implementation.\n",
+    "Standard attributes can be made required **during dataset creation** for instance. This enforces users to pass certain meta information and validates it at the same time. Consequently data becomes re-usable and explorable.\n",
     "\n",
-    "The following explains the usage:"
+    "Additionally, so-called [layouts](./layouts.ipynb) can be defined, too. They are used to specify the content of an HDF5 file after it has been written. This concept applies best during file exchange as the layout validates if a file is complete and meets the expertation of the project or collaborative user."
    ]
   },
   {
@@ -29,10 +27,15 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-05-07_09:51:57,819 DEBUG    [__init__.py:36] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
+     "ename": "NameError",
+     "evalue": "name 'Dict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mh5rdmtoolbox\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mh5tbx\u001b[39;00m\n",
+      "File \u001b[1;32m~\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\__init__.py:123\u001b[0m\n\u001b[0;32m    119\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"get the current convention\"\"\"\u001b[39;00m\n\u001b[0;32m    120\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m conventions\u001b[38;5;241m.\u001b[39mcurrent_convention\n\u001b[1;32m--> 123\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfind\u001b[39m(filename, flt: Union[\u001b[43mDict\u001b[49m, \u001b[38;5;28mstr\u001b[39m],\n\u001b[0;32m    124\u001b[0m          objfilter: Union[\u001b[38;5;28mstr\u001b[39m, h5py\u001b[38;5;241m.\u001b[39mDataset, h5py\u001b[38;5;241m.\u001b[39mGroup, \u001b[38;5;28;01mNone\u001b[39;00m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m    125\u001b[0m          rec: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m    126\u001b[0m          ignore_attribute_error: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[0;32m    127\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m File(filename) \u001b[38;5;28;01mas\u001b[39;00m h5:\n\u001b[0;32m    128\u001b[0m         \u001b[38;5;66;03m# TODO return \"offline-datasets or offline-group(s)\". They have the attributs can can be sliced, have ndim, shape, ... etc but when sliced only then the file is opened, data is returned and file is closed again.\u001b[39;00m\n\u001b[0;32m    129\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m h5\u001b[38;5;241m.\u001b[39mfind(flt, objfilter, rec, ignore_attribute_error)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Dict' is not defined"
      ]
     }
    ],
@@ -42,59 +45,46 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11aa9a65-860e-4045-b2ea-c8250e970fd2",
-   "metadata": {},
-   "source": [
-    "## Standard Attributes\n",
-    "\n",
-    "A standard attribute can be defined by inheriting from the class `StandardAttribute`. To control the processed data, which means to evaluate the user input and control return values, we need to provide the methods `set()` and `get()` and a `name`. To make it available for use it must be registerde (added) to a convention which then is enabled. Will walk though all that in the following."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "254bd8ff-1d4f-4e20-aed9-0d488615d284",
-   "metadata": {},
-   "source": [
-    "## List of available conventions\n",
-    "\n",
-    "It is possible to register conventions, which is the list of standard attributes for the respective HDF objects. A list can be optained by the dictionary `conventons.registered_conventions`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "b3382d99-6c5e-4d81-8894-a95eb8364dd4",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['h5py', 'tbx'])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "h5tbx.conventions.registered_conventions.keys()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "fffca28f-1840-42e4-a672-b8292554f611",
    "metadata": {},
    "source": [
-    "## Definition of a standard attribute\n",
-    "Let's say we want to enforce the user to store the type of data with each dataset, e.g. whether it is from a numerical or experimental source. We call this attribute \"source\":"
+    "## Defining a new standard attribute\n",
+    "\n",
+    "Referring to the above example, let's define the standard attribute `units`. Therefore, we need to inherite from the class `StandardAttribute` and provide the methods `set()` and `get()`. The attribute name with which this class is associated is the class name or, if set, the class variable `name` (the latter is recommended to be used):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "ed3296ad-2d4d-4184-9861-1c6763aa32e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from h5rdmtoolbox import conventions\n",
+    "import warnings\n",
+    "\n",
+    "class SourceAttribute(conventions.StandardAttribute):\n",
+    "    \n",
+    "    name = 'source'\n",
+    "    \n",
+    "    def set(self, source_type: str):\n",
+    "        if source_type.upper() not in ('NUMERICAL', 'EXPERIMENTAL'):\n",
+    "            raise ValueError('Unknown source type')\n",
+    "        super().set(source_type)\n",
+    "        \n",
+    "    def get(self):\n",
+    "        source_type = super().get()\n",
+    "        if source_type is None:\n",
+    "            warnings.warn('No source available')\n",
+    "            return\n",
+    "        elif source_type.upper() not in ('NUMERICAL', 'EXPERIMENTAL'):\n",
+    "            warings.warn(f'Unexpected source type: {source_type}')\n",
+    "        return source_type.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f7cc80b7-8880-4414-95b6-803730a499c5",
    "metadata": {
     "tags": []
@@ -125,6 +115,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "254bd8ff-1d4f-4e20-aed9-0d488615d284",
+   "metadata": {},
+   "source": [
+    "## List of available conventions\n",
+    "\n",
+    "It is possible to register conventions, which is the list of standard attributes for the respective HDF objects. A list can be optained by the dictionary `conventons.registered_conventions`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3382d99-6c5e-4d81-8894-a95eb8364dd4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "h5tbx.conventions.registered_conventions.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f794b19d-a950-47d7-8af5-b16b79e70974",
    "metadata": {},
    "source": [
@@ -138,25 +150,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b04a6b93-9bf3-45eb-ba88-4930d7b935d9",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[1mConvention(my_convention)\u001b[0m\u001b[1m\n",
-       "> Properties\u001b[0m: (\u001b[3mNothing registered\u001b[0m)\u001b[1m\n",
-       "> Methods\u001b[0m:"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cv = conventions.Convention('my_convention')\n",
     "cv"
@@ -172,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "664bc012-33d8-4ccc-a1fd-ca9516bb26a8",
    "metadata": {
     "tags": []
@@ -195,29 +194,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c3621cd4-2431-44ad-9896-790a7e7fd89a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[1mConvention(my_convention)\u001b[0m\u001b[1m\n",
-       "> Properties\u001b[0m:\n",
-       "Dataset:\n",
-       "    * source: SourceAttribute\u001b[1m\n",
-       "> Methods\u001b[0m:\n",
-       "  Group.create_dataset():\n",
-       "    * source (optional)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cv"
    ]
@@ -241,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "35fe8700-fc08-49c7-9893-578339248541",
    "metadata": {
     "tags": []
@@ -264,28 +246,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "299b1a22-009a-404b-8ba8-f705a1864e29",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\da4323\\AppData\\Local\\Temp\\ipykernel_25392\\272882550.py:16: UserWarning: No source available\n",
-      "  warnings.warn('No source available')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with h5tbx.File() as h5:\n",
     "    ds = h5.create_dataset('data', (4, 5))\n",
@@ -302,31 +268,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "2ef94ffa-9ed0-44f8-9f79-ee7012cc3bec",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-05-07_17:56:58,573 ERROR    [core.py:637] Could not set attributes {'source': 'model-based'} for dataset data3\n",
-      "2023-05-07_17:56:58,573 ERROR    [core.py:637] Could not set attributes {'source': 'model-based'} for dataset data3\n",
-      "2023-05-07_17:56:58,577 ERROR    [core.py:637] Could not set attributes {'source': 'model-based'} for dataset data4\n",
-      "2023-05-07_17:56:58,577 ERROR    [core.py:637] Could not set attributes {'source': 'model-based'} for dataset data4\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unknown source type\n",
-      "Unknown source type\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with h5tbx.File() as h5:\n",
     "    ds1 = h5.create_dataset('data1', (4, 5), attrs={'source': 'numerical'})\n",
@@ -352,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "4cb1bafe-795d-4824-aa91-0fda3c1c0f17",
    "metadata": {
     "tags": []
@@ -364,49 +311,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "71233e6a-5a54-46eb-a854-9bc90c0d687a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[1mConvention(my_convention)\u001b[0m\u001b[1m\n",
-       "> Properties\u001b[0m:\n",
-       "Dataset:\n",
-       "    * source: SourceAttribute\u001b[1m\n",
-       "> Methods\u001b[0m:\n",
-       "  Group.create_dataset():\n",
-       "    * source"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e691035f-f4e6-4e42-8707-c1ddf53a04f4",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The standard attribute \"source\" is required but not provided.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with h5tbx.File() as h5:\n",
     "    try:\n",
@@ -417,25 +339,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "d518cfdd-b28c-4917-af5e-ac9d239de346",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset \"/data\"\n",
-      "---------------\n",
-      "*shape:        (4, 5)\n",
-      "*dtype:        float32\n",
-      "*compression:  gzip (5)\n",
-      "source:        EXPERIMENTAL\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with h5tbx.File() as h5:\n",
     "    ds = h5.create_dataset('data', (4, 5), source='Experimental')\n",
@@ -448,6 +357,12 @@
    "id": "13af7d15-bd56-4871-a010-1c5f317d1936",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f183cdae-4f5b-49be-883e-a9f816ba06f0",
+   "metadata": {},
    "source": []
   }
  ],
